src/compiler/snapshots/isa__compiler__lexer__tests__keyword-21.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"else\").next()"
---
Some(
    Ok(
        Spand {
            data: KwElse,
            span: SpanData { file_id: 0, start: 0, end: 4 },
        },
    ),
)
