src/compiler/snapshots/isa__compiler__lexer__tests__keyword-22.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"in\").next()"
---
Some(
    Ok(
        Spand {
            data: KwIn,
            span: SpanData { file_id: 0, start: 0, end: 2 },
        },
    ),
)
