src/compiler/snapshots/isa__compiler__lexer__tests__keyword-23.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"with\").next()"
---
Some(
    Ok(
        Spand {
            data: KwWith,
            span: SpanData { file_id: 0, start: 0, end: 4 },
        },
    ),
)
