src/compiler/snapshots/isa__compiler__lexer__tests__keyword-24.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"module\").next()"
---
Some(
    Ok(
        Spand {
            data: KwModule,
            span: SpanData { file_id: 0, lo: 0, hi: 6 },
        },
    ),
)
