src/compiler/snapshots/isa__compiler__lexer__tests__keyword-25.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"Self\").next()"
---
Some(
    Ok(
        Spand {
            data: KwSelf,
            span: SpanData { file_id: 0, lo: 0, hi: 4 },
        },
    ),
)
