src/compiler/snapshots/isa__compiler__lexer__tests__keyword-3.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"val\").next()"
---
Some(
    Ok(
        Spand {
            data: KwVal,
            span: SpanData { file_id: 0, lo: 0, hi: 3 },
        },
    ),
)
