src/compiler/snapshots/isa__compiler__lexer__tests__keyword-4.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"if\").next()"
---
Some(
    Ok(
        Spand {
            data: KwIf,
            span: SpanData { file_id: 0, start: 0, end: 2 },
        },
    ),
)
