src/compiler/snapshots/isa__compiler__lexer__tests__keyword-5.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"then\").next()"
---
Some(
    Ok(
        Spand {
            data: KwThen,
            span: SpanData { file_id: 0, start: 0, end: 4 },
        },
    ),
)
