src/compiler/snapshots/isa__compiler__lexer__tests__keyword-6.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"true\").next()"
---
Some(
    Ok(
        Spand {
            data: KwTrue,
            span: SpanData { file_id: 0, start: 0, end: 4 },
        },
    ),
)
