src/compiler/snapshots/isa__compiler__lexer__tests__keyword-7.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"false\").next()"
---
Some(
    Ok(
        Spand {
            data: KwFalse,
            span: SpanData { file_id: 0, lo: 0, hi: 5 },
        },
    ),
)
