src/compiler/snapshots/isa__compiler__lexer__tests__keyword-8.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"int\").next()"
---
Some(
    Ok(
        Spand {
            data: KwInt,
            span: SpanData { file_id: 0, lo: 0, hi: 3 },
        },
    ),
)
