src/compiler/snapshots/isa__compiler__lexer__tests__keyword-9.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"bool\").next()"
---
Some(
    Ok(
        Spand {
            data: KwBool,
            span: SpanData { file_id: 0, start: 0, end: 4 },
        },
    ),
)
